--- a/src/main/bvmui/public/index.html
+++ b/src/main/bvmui/public/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>BK - Visual Manager</title>
     <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 </head>
-
 <body>
     <noscript>
-        <strong>We're sorry but Bookkeeper Visual Manager doesn't work properly without JavaScript enabled. Please
-            enable it to continue.</strong>
+        <strong>We're sorry but Bookkeeper Visual Manager doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
 </body>
-
 </html>
