--- a/src/main/bvmui/public/index.html
+++ b/src/main/bvmui/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +7,10 @@
     <title>BK - Visual Manager</title>
     <link rel="shortcut icon" href="favicon.ico">
 </head>
-
 <body>
     <noscript>
-        <strong>We're sorry but Bookkeeper Visual Manager doesn't work properly without JavaScript enabled. Please
-            enable it to continue.</strong>
+        <strong>We're sorry but Bookkeeper Visual Manager doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
 </body>
-
 </html>
